Adjust min-heights to avoid loading jumps

--- a/app/javascript/app/components/compare-ghg-chart/compare-ghg-chart-styles.scss
+++ b/app/javascript/app/components/compare-ghg-chart/compare-ghg-chart-styles.scss
@@ -38,7 +38,7 @@
 
 .chartWrapper {
   position: relative;
-  min-height: 420px;
+  min-height: 560px;
   max-height: 100%;
 
   > div {
